# The-Cool-Clark-Electrostatics-Visualiser

./: CMakeLists.txt  README.md
The Cool Clark Electrostatics visualiser/: CMakeLists.txt
The Cool Clark Electrostatics visualiser/Src/: Camera.cpp  Camera.h  ComputeManager.cpp  ComputeManager.h  Core.cpp  Core.h  Interactivity.cpp  Interactivity.h  Renderer.cpp  Renderer.h  SODefinitions.comp  Shader.cpp  Shader.h  SourceObjects.h  The Cool Clark Electrostatics Visualiser.cpp  glad.c  utils.cpp  utils.h
The Cool Clark Electrostatics visualiser/Src/Shaders/: PickingShader.frag  PointChargeShader.frag  SODefinitions.comp  chargeShader.frag  chargeShader.vert  circleShader.frag  circleShader.vert  cylinderShader.frag  cylinderShader.vert  gridShader.frag  gridShader.vert  infiniteLineShader.frag  infiniteLineShader.vert  initParticles.comp  particle.frag  particle.vert  shader.comp  simpleShader.frag  simpleShader.vert  sphereShader.frag  streamLines.frag  streamLines.vert
The Cool Clark Electrostatics visualiser/Third Party Libraries/include/glad/: glad.h
The Cool Clark Electrostatics visualiser/Third Party Libraries/lib/: glfw3.lib
